2010-11-11  Joone Hur  <joone@kldp.org>

        Reviewed by Antonio Gomes.

        [GTK][DRT] Implement LayoutTestController::nodesFromRect
        https://bugs.webkit.org/show_bug.cgi?id=46598

        Support nodesFromRect in DRT

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::nodesFromRect):

2010-11-11  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        editing/selection/context-menu-on-text.html fails on chromium
        https://bugs.webkit.org/show_bug.cgi?id=45898

        Enhance Chromium's EventSender::contextClick() to return
        array of menu strings. The implementation incomplete because
        Although actual context menu is implemented by the browser,
        it reflects editability of underlying context thus makes
        context-menu-on-text.html passed.
        
        * DumpRenderTree/chromium/EventSender.cpp:
        (makeMenuItemStringsFor): Added.
        (EventSender::contextClick): Now returns array of menu strings.
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::showContextMenu): Now storing given WebContextMenuData object.
        (WebViewHost::clearContextMenuData): Added.
        (WebViewHost::lastContextMenuData): Added.
        * DumpRenderTree/chromium/WebViewHost.h:

2010-11-11  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, build fix.

        fix build breakage caused by fix for bug 49380 (r71858).

        config_standalone needs to ensure that the packages it needs are
        in sys.path.

        https://bugs.webkit.org/show_bug.cgi?id=49419

        * Scripts/webkitpy/layout_tests/port/config_standalone.py:

2010-11-11  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Adam Roben.

        Fix NRWT to respect set-webkit-configuration again :(

        This change fixes a typo in config.py that was causing the wrong
        value to be read initially and us never actually looking into